[gd_scene load_steps=6 format=3 uid="uid://chmd7fogneps3"]

[ext_resource type="Script" path="res://scripts/Chest.gd" id="1_2u4vx"]
[ext_resource type="Texture2D" uid="uid://dcd8om2jymwtg" path="res://Sprites/Spider.png" id="2_7th38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b8hk"]
size = Vector2(32, 32)

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Chest" type="Area2D"]
script = ExtResource("1_2u4vx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7th38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0b8hk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Glow" type="PointLight2D" parent="."]
color = Color(1, 0.843137, 0, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_1")
texture_scale = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
